<resources>
    <string name="allowed_attempts">Wrong attempts</string>
    <string name="accessibility_service_required">Accessibility service required</string>
    <string name="when_usb_connected">When USB is connected...</string>
    <string name="remove_itself">Uninstall itself</string>
    <string name="root_recommended">Requires root or Dhizuku; root recommended</string>
    <string name="ui_settings">UI settings</string>
    <string name="actions_settings">Actions settings</string>
    <string name="permissions">Permissions settings</string>
    <string name="triggers_settings">Triggers settings</string>
    <string name="logd_settings">Logs status settings</string>
    <string name="multiuser_settings">Multiuser settings</string>
    <string name="users_limit">Maximum number of users</string>
    <string name="root_only">Requires root</string>
    <string name="safeboot_settings">Safe boot settings</string>
    <string name="dangerous_settings">Dangerous settings</string>
    <string name="system_theme">System theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="do_nothing">Do nothing</string>
    <string name="destroy_data">Destroy data</string>
    <string name="reboot">Reboot</string>
    <string name="user_limit_not_changed">User limit wasn\'t changed</string>
    <string name="cant_get_user_limit">Failed to get user limit</string>
    <string name="set_users_limit">Set user limit</string>
    <string name="set_users_limit_long">You can set the user limit in this dialog. Creating too many users may overflow your device memory.</string>
    <string name="multiuser_ui_unlocked">Multiuser UI unlocked</string>
    <string name="clear_itself">Clear itself</string>
    <string name="hide_app">Hide app</string>
    <string name="clear_data">Clear app data</string>
    <string name="hide_long"><![CDATA[<p>The app will hide itself after all operations finish. Requires Dhizuku permission or root.</p>
<p><strong>Important: if used without root, this option only hides the app from the launcher; the app remains visible in settings. This option is incompatible with device admin rights when used with Dhizuku.</strong></p>]]></string>
    <string name="clear_itself_long"><![CDATA[<p>The app will clear itself after all operations finish. Requires Dhizuku permission or root.</p>
<p><strong>Important: the app will remain installed on the device. This option is incompatible with device admin rights when used with Dhizuku.</strong></p>]]></string>
    <string name="clear_data_long">The app will clear its data after all operations finish. After clearing the app\'s data, the app can only hide itself (see "Hide itself" option). In contrast to the "Clear itself" option, the app\'s permissions will be left intact.</string>
    <string name="run_on_password">Run on duress password</string>
    <string name="run_on_password_long">The app will start destroying your data when you enter the duress password (NOT the PIN). This is the same password you use to unlock the app. Requires the accessibility service to be running.</string>
    <string name="install_dhizuku">Do you want to install Dhizuku?</string>
    <string name="install_dhizuku_long">You need to install the Dhizuku app and grant it device owner rights.</string>
    <string name="safeboot_disabled">Safe boot disabled</string>
    <string name="safeboot_disabled_long">The device can\'t be booted into safe mode now.</string>
    <string name="safeboot_enabled">Safe boot enabled</string>
    <string name="safeboot_enabled_long">The device can be booted into safe mode now.</string>
    <string name="safeboot_status_not_changed">Safe boot status not changed</string>
    <string name="user_switcher_enabled">User switcher enabled</string>
    <string name="user_switcher_disabled">User switcher disabled</string>
    <string name="user_switcher_status_change_failed">Failed to change user switcher status</string>
    <string name="user_switch_disabled">User switch disabled</string>
    <string name="user_switch_disabled_long">The UI for user switching was disabled as well.</string>
    <string name="user_switch_enabled">User switch enabled</string>
    <string name="user_switch_status_change_failed">Failed to change user switch status</string>
    <string name="multiuser_ui_unlocked_long">You can open user settings now</string>
    <string name="operation_successful">Operation successful</string>
    <string name="multiuser_ui_locked">Multiuser UI locked</string>
    <string name="multiuser_ui_status_change_failed">Changing multiuser UI status failed</string>
    <string name="error_while_loading_data">Failed to load data</string>
    <string name="enable_safe_boot_long">Safe boot is disabled. Do you really want to enable safe boot? An adversary may use safe boot to circumvent the protection offered by this app.</string>
    <string name="disable_safe_boot_long">Safe boot is enabled. Do you really want to disable safe boot? An adversary may use safe boot to circumvent the protection offered by this app. Please use root or ADB to disable safe boot instead of Dhizuku.</string>
    <string name="enable_safe_boot">Enable safe boot</string>
    <string name="disable_safe_boot">Disable safe boot</string>
    <string name="disable_multiuser_ui">Disable multiuser UI</string>
    <string name="disable_multiuser_ui_long">Multiuser UI is enabled. Do you want to disable it?</string>
    <string name="enable_multiuser_ui">Enable multiuser UI</string>
    <string name="enable_multiuser_ui_long">Multiuser UI is disabled. Do you want to enable it?</string>
    <string name="disable_user_switcher">Disable user switcher UI</string>
    <string name="enable_user_switcher">Enable user switcher UI</string>
    <string name="disable_user_switcher_ui_long">User switcher UI is enabled. Do you want to disable it? It\'s recommended to disable the UI for switching users whenever you don\'t need it, because otherwise an adversary may use the pull-down settings menu to get a list of your profiles from the lock screen.</string>
    <string name="enable_user_switcher_ui_long">User switcher UI is disabled. Do you want to enable it? It\'s recommended to disable the UI for switching users whenever you don\'t need it, because otherwise an adversary may use the pull-down settings menu to get a list of your profiles from the lock screen.</string>
    <string name="enable_switch_user">Allow user switching</string>
    <string name="disable_switch_user">Prohibit user switching</string>
    <string name="enable_switch_user_long">User switching is currently prohibited. Do you want to allow it and enable the UI for switching users? It\'s recommended to disable the UI for switching users whenever you don\'t need it, because otherwise an adversary may use the pull-down settings menu to get a list of your profiles from the lock screen.\nImportant: use this method only if enabling the user switcher UI option didn\'t work.</string>
    <string name="disable_switch_user_long">User switching is currently allowed. Do you want to prohibit it and disable the UI for switching users? It\'s recommended to disable the UI for switching users whenever you don\'t need it, because otherwise an adversary may use the pull-down settings menu to get a list of your profiles from the lock screen.\nImportant: use this method only if disabling the user switcher UI option didn\'t work.</string>
    <string name="accessibility_service_title">Open accessibility service settings</string>
    <string name="accessibility_service_long"><![CDATA[This app requires the accessibility service for various actions. Click "OK" and go to "Installed Services > Island (or Shelter)" if you want to enable or disable the accessibility service.]]></string>
    <string name="run_trim">Run TRIM</string>
    <string name="trim_long"><![CDATA[After all operations complete, the app will run the <a href="https://blog.elcomsoft.com/2025/06/what-trim-drat-and-dzat-really-mean-for-ssd-forensics/">TRIM command</a> to inform the drive which areas are no longer in use and can be erased. Enabling this option may reduce the likelihood of recovering deleted data. Requires root rights or Shizuku rights.</p>
<p><strong>Important: it is recommended to use this option with root privileges. If you use this option with Shizuku permission while the Shizuku service is inactive, TRIM will not run.</strong></p>]]></string>
    <string name="wipe_data">Wipe data</string>
    <string name="wipe_long">The app will wipe all user data, or all data on the device if called from the main user. For wiping all device data (calling wipe from the main user) with device admin rights, Android 13 or lower is required.</string>
    <string name="self_destruct_long"><![CDATA[<p>The app will destroy itself after all operations finish. Requires root rights or Shizuku permission.</p>
<p><strong>Important: it is recommended to use this option with root privileges. If you use this option with Shizuku permission while the Shizuku service is inactive, the app will not be able to destroy itself. In this case, the "Hide app" option can help by hiding the app from the launcher.</strong></p>]]></string>
    <string name="run_on_connection">Destroy data on connection</string>
    <string name="run_on_usb_connection_long">The app will start destroying data when a USB device or USB accessory is connected. Connecting the device to a computer in charging-only mode will also be counted. Don\'t forget to disable this option if you want to connect any USB device without risking data loss! Requires the accessibility service to be running.</string>
    <string name="bruteforce_defense">Brute-force defense</string>
    <string name="root_or_dhizuku_api">Requires root or Dhizuku, Android 9+</string>
    <string name="root_and_owner">Requires root or Dhizuku</string>
    <string name="admin_rights">Admin rights</string>
    <string name="device_owner">Dhizuku</string>
    <string name="root">Root rights</string>
    <string name="prevent_bruteforce">Prevent brute-force</string>
    <string name="accessibility_service">Accessibility service</string>
    <string name="destroy_on_button">Run on power button clicks</string>
    <string name="clicks_number">Number of clicks (power button)</string>
    <string name="latency_text">Latency — power button, legacy (ms)</string>
    <string name="multiuser_ui">Multiuser UI</string>
    <string name="switch_user_ui">User switcher UI</string>
    <string name="switch_user_permission">Switch user permission</string>
    <string name="root_and_owner_android9">Requires root or Dhizuku, Android 9+</string>
    <string name="disable_multiuser_ui_automatically">Disable multiuser UI when...</string>
    <string name="root_and_owner_android9_acessibility">Requires root/Shizuku/Dhizuku, accessibility service, Android 9+</string>
    <string name="root_latency_text">Latency — power button, superuser (ms)</string>
    <string name="destroy_on_volume_button">Run on volume button clicks</string>
    <string name="clicks_number_volume">Number of clicks (volume button)</string>
    <string name="latency_volume_text">Latency — volume button (ms)</string>
    <string name="bruteforce_prevention_settings">Brute-force prevention settings</string>
    <string name="buttons_settings">Buttons settings</string>
    <string name="data_destruction_settings">Data destruction settings</string>
    <string name="permissions_setting">Permissions settings</string>
    <string name="permanent_settings">Noticeable settings</string>
    <string name="shizuku">Shizuku</string>
    <string name="shizuku_state">Shizuku state</string>
    <string name="root_or_shizuku_root_recommended">Root or Shizuku; root recommended</string>
    <string name="dhizuku_root_admin">Requires Dhizuku/root/admin rights</string>
</resources>