<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <com.sonozaki.settings.presentation.views.SettingsItemView
        android:id="@+id/permissions_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemText="@string/permissions_setting">
    </com.sonozaki.settings.presentation.views.SettingsItemView>
    <com.sonozaki.settings.presentation.views.SettingsItemView
        android:id="@+id/data_destruction_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemText="@string/data_destruction_settings">
    </com.sonozaki.settings.presentation.views.SettingsItemView>
    <com.sonozaki.settings.presentation.views.SettingsItemView
        android:id="@+id/triggers_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemText="@string/triggers_settings">
    </com.sonozaki.settings.presentation.views.SettingsItemView>
    <com.sonozaki.settings.presentation.views.SettingsItemView
        android:id="@+id/permanent_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemText="@string/permanent_settings">
    </com.sonozaki.settings.presentation.views.SettingsItemView>
    <com.sonozaki.settings.presentation.views.SettingsItemView
        android:id="@+id/multiuser_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemText="@string/multiuser_settings">
    </com.sonozaki.settings.presentation.views.SettingsItemView>
    <com.sonozaki.settings.presentation.views.SettingsItemView
        android:id="@+id/ui_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemText="@string/ui_settings">
    </com.sonozaki.settings.presentation.views.SettingsItemView>
</LinearLayout>
</ScrollView>